--- a/css/blocks/contacts.scss
+++ b/css/blocks/contacts.scss
@@ -18,6 +18,11 @@
     width: 100%;
     height: 5rem;
     margin-bottom: 0;
+
+    @include phone {
+        flex-direction: column;
+        text-align: center;
+    }
 }
 
 .footer__phone {
@@ -41,6 +46,10 @@
     font-size: .88rem;
     font-weight: 300;
     line-height: 1.5rem;
+
+    @include phone {
+        margin-bottom: -.9rem;;
+    }
 }
 
 .contacts__phone {
@@ -56,6 +65,11 @@
     flex-direction: row-reverse;
     justify-content: start;
     width: 50%;
+
+    @include phone {
+        justify-content: center;
+        margin-top: .4rem;
+    }
 }
 
 .footer__social {
