--- a/css/blocks/form.scss
+++ b/css/blocks/form.scss
@@ -40,12 +40,19 @@
 }
 
 .title__form {
+    text-align: center;
     color: #f9b43b;
     font-family: gagalin-regular;
     font-size: 4.5rem;
     font-weight: 400;
     line-height: 4rem;
     margin-bottom: 3.13rem;
+
+    @include phone {
+        font-size: 2.5rem;
+        margin: 1.13rem auto;
+        line-height: 2rem;
+    }
 }
 
 .form__input {
@@ -55,6 +62,26 @@
     border: none;
     padding: rem(5px);
     box-sizing: border-box;
+    font-family: ubuntu-regular;
+
+}
+
+.form__input-textarea {
+    min-width: 100%;
+    // max-width: rem(440px);
+    // max-height: rem(103px);
+    min-height: rem(103px);
+    background: #fff;
+    border-radius: .19rem;
+    border: none;
+    padding: rem(5px);
+    box-sizing: border-box;
+    font-family: ubuntu-regular;
+
+    @include phone {
+        min-height: rem(60px);
+
+    }
 }
 
 .form__block-title {
@@ -79,17 +106,15 @@
 
 }
 
-textarea {
-    max-width: 100%;
-    height: 50%;
-    padding: rem(15px);
-    box-sizing: border-box;
-}
-
 .radio__section {
     display: flex;
     flex-wrap: wrap;
     margin-bottom: 1.25rem;
+
+    @include phone {
+        margin-bottom: .5rem;
+
+    }
 }
 
 .radio {
@@ -97,6 +122,10 @@ textarea {
     align-items: center;
     cursor: pointer;
     margin: 0 1.25rem 1.56rem 0;
+
+    @include phone {
+        margin: 0 1.25rem .5rem 0;
+    }
 }
 
 .radio__input {
