--- a/css/blocks/team.scss
+++ b/css/blocks/team.scss
@@ -11,7 +11,7 @@
 .team__block-right {
     display: flex;
     justify-content: center;
-    align-items: center;
+    // align-items: center;
     background: #313436;
     opacity: .95;
     position: absolute;
@@ -23,7 +23,6 @@
     height: 100vh;
 
     @include tablets {
-        justify-content: center;
         width: 100%;
 
         left: 0;
@@ -31,20 +30,26 @@
 }
 
 .team__block-in {
-    padding: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
     padding-left: -50%;
+    height: 100%;
 
     @include tablets {
         text-align: center;
     }
 
     @include phone {
-        padding-top: 5.19rem;
+        padding-top: 2.19rem;
 
     }
 }
 
 .team__title {
+    height: 20%;
+    display: flex;
+    align-items: center;
     color: #f9b43b;
     font-family: gagalin-regular;
     font-size: 4.5rem;
@@ -55,15 +60,18 @@
     @include phone {
         font-size: 3.5rem;
         margin: 0 0 1rem 0;
+        justify-content: center;
 
     }
 }
 
 .team__name {
     display: flex;
+    margin-right: 0;
     flex-direction: row;
     justify-content: flex-start;
     opacity: 0.92;
+
 
     @include tablets {
         justify-content: center;
@@ -96,11 +104,10 @@
 .team__member {
     cursor: pointer;
     margin-bottom: 2.12rem;
-    display: flex;
-    flex-direction: column;
+    width: 100%;
 
     @include phone {
-        margin-bottom: 1rem;
+        margin-bottom: .8rem;
     }
 }
 
