--- a/css/blocks/form.scss
+++ b/css/blocks/form.scss
@@ -245,3 +245,10 @@
         border-left-color: transparent;
     }
 }
+
+.error {
+    height: 1rem;
+    color: #e45028;
+    font-family: ubuntu-regular;
+    font-size: .8rem;
+}
