--- a/css/blocks/team.scss
+++ b/css/blocks/team.scss
@@ -59,9 +59,9 @@
 
     @include phone {
         font-size: 3.5rem;
-        margin: 0 0 1rem 0;
+        margin: 0 auto 1rem auto;
         justify-content: center;
-
+        
     }
 }
 
