--- a/css/layout/main.scss
+++ b/css/layout/main.scss
@@ -17,6 +17,7 @@
 @import './../blocks/fixed-menu.scss';
 @import './../blocks/hamburger-menu.scss';
 @import './../blocks/hover-menu.scss';
+@import './../blocks/form_modal.scss';
 
 
 @font-face {
