--- a/css/blocks/burgers.scss
+++ b/css/blocks/burgers.scss
@@ -5,120 +5,45 @@
     width: 100%;
 }
 
-.burgers__slider {
+.burgers__menu {
+    position: relative;
     display: flex;
     flex-direction: row;
     width: 100%;
     height: 100%;
-
-}
-
-.slider-block {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 100%;
-    width: 100%;
-    position: relative;
-    overflow: hidden;
-
-    &:first-child {
-        width: 10%;
-    }
-
-    &:last-child {
-        width: 10%;
-    }
-}
-
-.slider-block__active {
-    display: inline-flex;
-    width: 300%;
-    overflow: hidden;
-    position: absolute;
-    will-change: left;
-    transition: left 1s;
-    height: 100%;
-}
-
-.slide-elem {
-    display: flex;
-    padding: 0 rem(30px);
-
-    @include tablets {
-        display: flex;
-        flex-direction: column;
-        align-items: center;
-    }
-}
-
-.slide-elem__leftside {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    // width: 50%;
-    height: 100%;
-    margin-right: 5%;
-
-    @include tablets {
-    //     // width: 100%;
-        margin-right: 0;
-        margin-bottom: -5.85rem;
-    }
-
-    @include phone {
-        widht: 100%;
-    }
-}
-
-.bbb {
-    @include phone {
-        max-widht: 70%;
-    }
-}
-
-.slide-elem__rightside {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    height: 100%;
-    width: 50%;
-
-    @include tablets {
-        width: 100%;
-        text-align: center;
-        margin-right: 0;
-        justify-content: flex-start;
-
-    }
 }
 
 .arrow-left {
-    border: rem(30px) solid transparent;
+    border: rem(25px) solid transparent;
     width: 0;
     height: 0;
     border-left-width: 0;
     border-right-color: #fff;
     opacity: .3;
+    position: absolute;
+    left: rem(-30px);
+    top: 50%;
 
     &:hover {
         opacity: 1;
     }
 
     @include tablets {
-        margin-right: 0;
         opacity: 1;
+        left: 0;
     }
 }
 
 .arrow-right {
-    border: rem(30px) solid transparent;
+    border: rem(25px) solid transparent;
     width: 0;
     height: 0;
     border-right-width: 0;
     border-left-color: #fff;
     opacity: .3;
+    position: absolute;
+    right: rem(-30px);
+    top: 50%;
 
     &:hover {
         opacity: 1;
@@ -126,6 +51,76 @@
 
     @include tablets {
         opacity: 1;
+        right: 0;
+    }
+}
+
+.slider__block {
+    overflow: hidden;
+    position: relative;
+    width: 100%;
+    height: 100vh;
+
+    @include phone {
+        margin: 0 10%;
+    }
+}
+
+.slider-block__active {
+    width: 300%;
+    white-space: nowrap;
+    font-size: 0;
+    position: absolute;
+    top: 0;
+    left: 0;
+    will-change: left;
+    transition: left .7s;
+}
+
+.slide-elem {
+    display: inline-flex;
+    width: calc(100% / 3);
+    height: 100vh;
+
+    @include tablets {
+        flex-direction: column;
+        justify-content: center;
+    }
+}
+
+.slide-elem__leftside {
+    width: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    @include tablets {
+        margin: 0 auto;
+    }
+}
+
+.leftside__img {
+    @include tablets {
+        max-width: 100%;
+        min-width: 80%;
+        margin: 0 auto;
+    }
+}
+
+.slide-elem__rightside {
+    padding: 0 5% 0 0;
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+    white-space: initial;
+
+    @include tablets {
+        width: 100%;
+        text-align: center;
+        padding: 0;
     }
 }
 
