--- a/css/layout/layout.scss
+++ b/css/layout/layout.scss
@@ -19,12 +19,32 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
+
+// .section {
+//   height: 100%;
+//   // height: 100vh;
+//   min-height: rem(650px);
+//   position: relative;
+//   display: flex;
+//   overflow: hidden;
+
+//   @include tablets {
+//     min-height: initial;
+//     // height: 100vh;
+//   }
+// }
+
 .wrapper {
-  overflow: hidden;
+  position: relative;
   width: 100%;
-  min-height: 100%;
-  display: flex;
-  flex-direction: column;
+  // min-height: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+
+.maincontent {
+  height: 100%;
+  transition: transform 1s;
 }
 
 .container {
