--- a/css/layout/main.css
+++ b/css/layout/main.css
@@ -17,16 +17,18 @@ body {
   -moz-osx-font-smoothing: grayscale; }
 
 .wrapper {
-  overflow: hidden;
+  position: relative;
   width: 100%;
-  min-height: 100%;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -ms-flex-direction: column;
-  flex-direction: column; }
+  height: 100%;
+  overflow: hidden; }
+
+.maincontent {
+  height: 100%;
+  -webkit-transition: -webkit-transform 1s;
+  transition: -webkit-transform 1s;
+  -o-transition: transform 1s;
+  transition: transform 1s;
+  transition: transform 1s, -webkit-transform 1s; }
 
 .container {
   width: 95%;
