--- a/css/layout/layout.scss
+++ b/css/layout/layout.scss
@@ -19,20 +19,9 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-
-// .section {
-//   height: 100%;
-//   // height: 100vh;
-//   min-height: rem(650px);
-//   position: relative;
-//   display: flex;
-//   overflow: hidden;
-
-//   @include tablets {
-//     min-height: initial;
-//     // height: 100vh;
-//   }
-// }
+.section {
+  height: 100vh;
+}
 
 .wrapper {
   position: relative;
