--- a/css/layout/main.css
+++ b/css/layout/main.css
@@ -16,6 +16,9 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale; }
 
+.section {
+  height: 100vh; }
+
 .wrapper {
   position: relative;
   width: 100%;
