--- a/css/layout/main.css
+++ b/css/layout/main.css
@@ -18,6 +18,9 @@ body {
 
 .section {
   height: 100vh; }
+  @media screen and (max-width: 480px) {
+    .section {
+      height: 100%; } }
 
 .wrapper {
   position: relative;
