--- a/css/layout/layout.scss
+++ b/css/layout/layout.scss
@@ -17,14 +17,15 @@ body {
   margin: 0;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  touch-action: none;
 }
 
 .section {
-  height: 100vh;
-  
-    @include phone {
-      height: 100%;
-    }
+  height: 100%;
+
+  @include phone {
+    height: 100%;
+  }
 }
 
 .wrapper {
