--- a/css/layout/layout.scss
+++ b/css/layout/layout.scss
@@ -17,11 +17,20 @@ body {
   margin: 0;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  // touch-action: none;
 }
 
 .section {
   height: 100%;
+  // height: 100vh;
+  min-height: rem(650px);
+  position: relative;
+  display: flex;
+  overflow: hidden;
+
+  @include tablets {
+    min-height: initial;
+    // height: 100vh;
+  }
 }
 
 .wrapper {
