--- a/css/layout/main.css
+++ b/css/layout/main.css
@@ -17,7 +17,16 @@ body {
   -moz-osx-font-smoothing: grayscale; }
 
 .section {
-  height: 100%; }
+  height: 100%;
+  min-height: 40.625rem;
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  overflow: hidden; }
+  @media screen and (max-width: 768px) {
+    .section {
+      min-height: initial; } }
 
 .wrapper {
   position: relative;
