--- a/css/blocks/form_modal.scss
+++ b/css/blocks/form_modal.scss
@@ -1,14 +1,15 @@
 .message__modal {
-   position: absolute;
+   // position: absolute;
    position: fixed;
    top: 0;
    width: 100%;
-   height: 100vh;
+   height: 100%;
    background: rgba(1, 1, 1, .8);
    overflow: hidden;
    display: flex;
    justify-content: center;
    align-items: center;
+   z-index: 1000;
 }
 
 .message__send {
