--- a/css/blocks/hover-menu.scss
+++ b/css/blocks/hover-menu.scss
@@ -1,10 +1,12 @@
 .hover-menu {
    position: absolute;
+   top:0;
    height: 85vh;
    width: 100%;
    background-color: #333537;
    opacity: .95;
    display: none;
+   z-index: 1000;
 }
 
 .hover-menu__header {
