--- a/css/layout/layout.scss
+++ b/css/layout/layout.scss
@@ -24,7 +24,6 @@ body {
   // height: 100vh;
   min-height: rem(650px);
   position: relative;
-  display: flex;
   overflow: hidden;
 
   @include tablets {
@@ -49,7 +48,7 @@ body {
 .container {
   width: 95%;
   max-width: rem(940px);
-  height: 100%;
+  // height: 100%;
   margin: 0 auto;
   display: flex;
   flex-direction: column;
