--- a/css/blocks/burgers.scss
+++ b/css/blocks/burgers.scss
@@ -1,7 +1,7 @@
 .burgers {
     background: linear-gradient(#f9b43b, #eb8d3a, #f9b43b);
     position: relative;
-    height: 100vh;
+    // height: 100vh;
     width: 100%;
 }
 
