--- a/css/blocks/contacts.scss
+++ b/css/blocks/contacts.scss
@@ -2,7 +2,7 @@
     background: url(../../img/bg_map.png) center center no-repeat;
     background-size: cover;
     position: relative;
-    height: 100vh;
+    // height: 100vh;
     margin: 0 0;
 }
 
