--- a/css/blocks/hover-menu.scss
+++ b/css/blocks/hover-menu.scss
@@ -1,7 +1,7 @@
 .hover-menu {
    position: absolute;
    top:0;
-   height: 85vh;
+   height: 85%;
    width: 100%;
    background-color: #333537;
    opacity: .95;
