--- a/css/blocks/team.scss
+++ b/css/blocks/team.scss
@@ -5,7 +5,7 @@
     background: url(../../img/bg_team.png) center center no-repeat;
     background-size: cover;
     position: relative;
-    height: 100vh;
+    height: 100%;
 }
 
 .team__block-right {
@@ -20,7 +20,7 @@
     bottom: 0;
     left: 50%;
     width: 50%;
-    height: 100vh;
+    height: 100%;
 
     @include tablets {
         width: 100%;
