--- a/css/blocks/work.scss
+++ b/css/blocks/work.scss
@@ -2,5 +2,5 @@
     background: url(../../img/bg_work.png) center center no-repeat;
     background-size: cover;
     position: relative;
-    height: 100vh;
+    // height: 100vh;
  }
