--- a/css/layout/layout.scss
+++ b/css/layout/layout.scss
@@ -22,12 +22,12 @@ body {
 .section {
   height: 100%;
   // height: 100vh;
-  min-height: rem(650px);
+  // min-height: rem(650px);
   position: relative;
   overflow: hidden;
 
   @include tablets {
-    min-height: initial;
+    // height: initial;
     // height: 100vh;
   }
 }
