--- a/css/blocks/block-two.scss
+++ b/css/blocks/block-two.scss
@@ -3,6 +3,8 @@
    background-size: cover;
    // height: 100vh;
    width: 100%;
+   display: flex;
+   align-items: center;
 }
 
 .container__block-two {
