--- a/css/blocks/header.scss
+++ b/css/blocks/header.scss
@@ -1,10 +1,11 @@
 .header {
    display: inline-flex;
    width: 100%;
-   padding: .75rem 0 rem(40px) 0;
-   
-   @include phone{
-      padding: .75rem 0 0 0;
+   margin: .75rem 0 rem(40px) 0;
+
+   @include phone {
+      margin: .75rem 0 rem(10px) 0;
+
    }
 }
 
