--- a/css/layout/main.css
+++ b/css/layout/main.css
@@ -18,7 +18,6 @@ body {
 
 .section {
   height: 100%;
-  min-height: 40.625rem;
   position: relative;
   overflow: hidden; }
 
@@ -383,7 +382,13 @@ template {
 .section--block-two {
   background: url(../../img/bg_best.png) center center no-repeat;
   background-size: cover;
-  width: 100%; }
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center; }
 
 .container__block-two {
   display: -webkit-box;
@@ -515,10 +520,10 @@ template {
   display: -ms-inline-flexbox;
   display: inline-flex;
   width: 100%;
-  padding: 0.75rem 0 2.5rem 0; }
+  margin: 0.75rem 0 2.5rem 0; }
   @media screen and (max-width: 480px) {
     .header {
-      padding: .75rem 0 0 0; } }
+      margin: 0.75rem 0 0.625rem 0; } }
 
 .header__logo {
   width: 5.75rem;
@@ -732,7 +737,7 @@ template {
   width: 1.81rem;
   height: .94rem;
   position: absolute;
-  bottom: 2.5rem;
+  top: 90%;
   left: 50%;
   -webkit-transform: translateX(-50%);
   -ms-transform: translateX(-50%);
