--- a/css/layout/main.css
+++ b/css/layout/main.css
@@ -14,7 +14,9 @@ body {
   height: 100%;
   margin: 0;
   -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale; }
+  -moz-osx-font-smoothing: grayscale;
+  -ms-touch-action: none;
+  touch-action: none; }
 
 .section {
   height: 100%;
