--- a/css/layout/main.css
+++ b/css/layout/main.css
@@ -1198,7 +1198,8 @@ template {
   width: 5rem;
   display: block;
   height: 100%;
-  position: relative; }
+  position: relative;
+  background: rgba(47, 50, 52, 0.8); }
   @media screen and (max-width: 480px) {
     .menu__trigger {
       width: 2rem; } }
@@ -1246,7 +1247,9 @@ template {
 .menu__pic {
   height: 100%;
   width: 100%;
-  position: relative; }
+  position: relative;
+  -webkit-filter: brightness(40%);
+  filter: brightness(40%); }
 
 .menu__block {
   height: 100%;
@@ -1427,7 +1430,105 @@ template {
 .work {
   background: url(../../img/bg_work.png) center center no-repeat;
   background-size: cover;
-  position: relative; }
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center; }
+
+#playBtn {
+  cursor: pointer; }
+
+.title__work {
+  font-family: gagalin-regular;
+  font-size: 4.5rem;
+  color: #333;
+  position: absolute;
+  top: 0; }
+  @media screen and (max-width: 480px) {
+    .title__work {
+      font-size: 2.5rem;
+      top: 10%; } }
+
+.player__wrapper {
+  width: 100%;
+  font-size: 0; }
+
+.player {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  width: 85%; }
+
+.player__start {
+  width: 10%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center;
+  color: #575757;
+  font-family: ubuntu-regular; }
+
+.player__controls {
+  width: 100%;
+  height: 120%;
+  background-color: #222;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -ms-flex-pack: distribute;
+  justify-content: space-around;
+  font-size: 1.2rem; }
+
+.player__duration {
+  color: #575757;
+  font-size: .8rem; }
+
+.player__playback {
+  width: 75%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  -webkit-box-pack: center;
+  -ms-flex-pack: center;
+  justify-content: center; }
+
+progress::-webkit-progress-bar {
+  border-radius: 0.3125rem; }
+
+progress {
+  background-color: #575757;
+  width: 90%; }
+
+progress::-webkit-progress-value {
+  background-color: #222; }
 
 .form {
   background: url(../../img/bg_form.png) center center no-repeat;
@@ -1686,7 +1787,6 @@ template {
   font-size: .8rem; }
 
 .contacts {
-  background: url(../../img/bg_map.png) center center no-repeat;
   background-size: cover;
   position: relative;
   margin: 0 0; }
