--- a/css/blocks/work.scss
+++ b/css/blocks/work.scss
@@ -89,6 +89,10 @@
     align-items: center;
     justify-content: space-around;
     font-size: 1.2rem;
+
+    @include phone {
+        display: none;
+    }
 }
 
 .player__duration {
